<resources>
    <string name="app_name">VNChat</string>
    <string name="gotinnhan">type message here...</string>
    <string name="viettinnhan">Write your message here...</string>
    <string name="email">Email...</string>
    <string name="passs">Password...</string>
    <string name="laylaimk">Forget Password ?</string>
    <string name="Login">Login</string>
    <string name="taikhoanmoi">Need new Account ?</string>
    <string name="dangnhapbangcachcuaban">or Login using your</string>
    <string name="dienthoai">Phone</string>
    <string name="vietsdt">Write phone number here...</string>
    <string name="vietmacode">Write verification code here...</string>
    <string name="kiemchung">Verify</string>
    <string name="tennd">user name</string>
    <string name="loichao">Hey.I am using chat App</string>
    <string name="guitin">Send Message</string>
    <string name="thoattn">Cancel Chat Request</string>
    <string name="taotk">Create Account</string>
    <string name="dacotk">Already have an Account ?</string>
    <string name="chao">hey, i am available now.</string>
    <string name="capnhap">Update</string>
    <string name="hienthitennguoidung">Display UserName</string>
    <string name="nhinthaylancuoi">Last Seen</string>
    <string name="nhantn">receiver messages here</string>
    <string name="guitn">sender messages</string>
    <string name="trangthai">user status</string>
    <string name="chapnhan">Accept</string>
    <string name="thoat">Cancel</string>
    <string name="guifile">Sending File</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agora_app_id">Video</string>
    <string name="google">Google</string>
</resources>
