<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/login_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size250dp"
                android:src="@drawable/login_photo"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitCenter"
                android:layout_alignParentLeft="true">

            </ImageView>
            <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/login_image"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@color/trang"
            android:padding="@dimen/size4dp"
            android:drawableStart="@drawable/email"
            android:layout_marginTop="@dimen/size25dp"
            android:layout_marginLeft="@dimen/size17dp"
            android:layout_marginRight="@dimen/size17dp"
                android:layout_alignParentLeft="true"
                android:drawableLeft="@drawable/email"></EditText>
            <EditText
                android:id="@+id/login_passwword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/login_email"
                android:hint="@string/passs"
                android:inputType="textPassword"
                android:background="@color/trang"
                android:padding="@dimen/size4dp"
                android:drawableStart="@drawable/password"
                android:layout_marginTop="@dimen/size10dp"
                android:layout_marginLeft="@dimen/size17dp"
                android:layout_marginRight="@dimen/size17dp"
                android:layout_alignParentLeft="true"
                android:drawableLeft="@drawable/password"></EditText>
            <TextView
                android:id="@+id/forget_passwword_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/login_passwword"
                android:text="@string/laylaimk"
                android:layout_marginTop="@dimen/size2dp"
                android:layout_marginLeft="@dimen/size15dp"
                android:layout_marginRight="@dimen/size23dp"
                android:textAlignment="textEnd"
                android:textSize="@dimen/size17sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="end"></TextView>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forget_passwword_link"
                android:layout_marginLeft="@dimen/size19dp"
                android:layout_marginTop="@dimen/size4dp"
                android:layout_marginRight="@dimen/size19dp"
                android:padding="@dimen/size4dp"
                android:text="@string/Login"
                android:textAllCaps="false"
                android:textSize="@dimen/size24sp"
                android:textColor="@android:color/background_light"
                android:background="@color/xanhnen"/>

            <TextView
                android:id="@+id/need_new_account_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/login_button"
                android:text="@string/taikhoanmoi"
                android:layout_marginTop="@dimen/size2dp"
                android:layout_marginLeft="@dimen/size15dp"
                android:layout_marginRight="@dimen/size23dp"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="@dimen/size17sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                ></TextView>

            <TextView
                android:id="@+id/login_using"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/need_new_account_link"
                android:text="@string/dangnhapbangcachcuaban"
                android:layout_marginTop="@dimen/size10dp"
                android:layout_marginLeft="@dimen/size15dp"
                android:layout_marginRight="@dimen/size23dp"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="@dimen/size17sp"
                android:textStyle="bold"
                ></TextView>

            <Button
            android:id="@+id/phone_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_using"
            android:layout_marginLeft="@dimen/size19dp"
            android:layout_marginTop="@dimen/size4dp"
            android:layout_marginRight="@dimen/size19dp"
            android:padding="@dimen/size4dp"
            android:text="@string/dienthoai"
            android:textAllCaps="false"
            android:textSize="@dimen/size14sp"
            android:textColor="@android:color/background_light"
            android:background="@color/xanhnen"
            android:drawableStart="@drawable/phone"
            android:drawableLeft="@drawable/phone" />
            <Button
                android:id="@+id/GG_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_login_button"
                android:layout_marginLeft="@dimen/size19dp"
                android:layout_marginTop="@dimen/size4dp"
                android:layout_marginRight="@dimen/size19dp"
                android:padding="@dimen/size4dp"
                android:text="@string/google"
                android:textAllCaps="false"
                android:textSize="@dimen/size14sp"
                android:textColor="@android:color/background_light"
                android:background="@color/xanhnen"
                android:drawableStart="@drawable/googleg_disabled_color_18"
                android:drawableLeft="@drawable/phone" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>