<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size250dp"
        android:src="@drawable/signup_photo"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitCenter"
        android:layout_alignParentLeft="true">

    </ImageView>
    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/register_image"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@color/trang"
        android:padding="@dimen/size4dp"
        android:drawableStart="@drawable/email"
        android:layout_marginTop="@dimen/size25dp"
        android:layout_marginLeft="@dimen/size17dp"
        android:layout_marginRight="@dimen/size17dp"
        android:layout_alignParentLeft="true"
        android:drawableLeft="@drawable/email"></EditText>
    <EditText
        android:id="@+id/register_passwword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/register_email"
        android:hint="@string/passs"
        android:inputType="textPassword"
        android:background="@color/trang"
        android:padding="@dimen/size4dp"
        android:drawableStart="@drawable/password"
        android:layout_marginTop="@dimen/size10dp"
        android:layout_marginLeft="@dimen/size17dp"
        android:layout_marginRight="@dimen/size17dp"
        android:layout_alignParentLeft="true"
        android:drawableLeft="@drawable/password"></EditText>
    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_passwword"
        android:layout_marginLeft="@dimen/size19dp"
        android:layout_marginTop="@dimen/size10dp"
        android:layout_marginRight="@dimen/size19dp"
        android:padding="@dimen/size4dp"
        android:text="@string/taotk"
        android:textAllCaps="false"
        android:textSize="@dimen/size24sp"
        android:textColor="@android:color/background_light"
        android:background="@color/xanhnen"/>

    <TextView
        android:id="@+id/already_have_account_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register_button"
        android:text="@string/dacotk"
        android:layout_marginTop="@dimen/size2dp"
        android:layout_marginLeft="@dimen/size15dp"
        android:layout_marginRight="@dimen/size23dp"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="@dimen/size17sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        ></TextView>

</RelativeLayout>