<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <include
        layout="@layout/app_bar_layout"
        android:id="@+id/settings_toolbar"
        ></include>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/set_profile_image"
        android:layout_width="@dimen/size250dp"
        android:layout_height="@dimen/size250dp"
        android:src="@drawable/profile_image"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size90dp"
        app:civ_border_width="@dimen/size5dp"
        app:civ_border_color="@color/xanhnen" />

    <EditText
        android:id="@+id/set_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/set_profile_image"
        android:inputType="textMultiLine"
        android:hint="@string/tennd"
        android:textAlignment="center"
        android:drawableStart="@drawable/edit_profile"
        android:textColor="@color/den"
        android:textStyle="bold"
        android:background="@color/trang"
        android:layout_marginStart="@dimen/size15dp"
        android:layout_marginEnd="@dimen/size15dp"
        android:padding="@dimen/size6dp"
        android:layout_marginTop="@dimen/size10dp"
        android:drawableLeft="@drawable/edit_profile"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/set_profile_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/set_user_name"
        android:inputType="textMultiLine"
        android:hint="@string/chao"
        android:textAlignment="center"
        android:drawableStart="@drawable/edit_status"
        android:textColor="@color/den"
        android:textStyle="bold"
        android:background="@color/trang"
        android:layout_marginStart="@dimen/size15dp"
        android:layout_marginEnd="@dimen/size15dp"
        android:padding="@dimen/size6dp"
        android:layout_marginTop="@dimen/size10dp"
        android:drawableLeft="@drawable/edit_profile"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/updata_setting_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/set_profile_status"
        android:inputType="textMultiLine"
        android:text="@string/capnhap"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        android:background="@color/xanhnen"
        android:layout_marginStart="@dimen/size15dp"
        android:layout_marginEnd="@dimen/size15dp"
        android:padding="@dimen/size6dp"
        android:layout_marginTop="@dimen/size10dp"
        android:textAllCaps="false"
        android:textSize="@dimen/size20sp"
        android:gravity="center_horizontal" />

</RelativeLayout>